--- a/README
+++ b/README
@@ -3,3 +3,17 @@ This challenge is to build your own version of the Unix command line tool wc!
 
 # Code Challenges
 This repo is based on a code challenge: https://codingchallenges.fyi/challenges/challenge-wc
+
+# Installation
+Make sure you have Go installed on your machine. Then, you can install the
+Go WC tool using `Makefile`:
+
+```sh
+# For Linux
+make build-linux
+
+# For Mac
+make build-mac
+```
+
+Or you can download binary file in: https://github.com/ductnn/cc-wc/tree/master/bin
